Fixed NavBar and SignIn/ Up Forms - NavBar: fixed NavLinks and icons - SignIn/ UpForm: fixed spacing, styling and images - App: added Switch and SignIn/ Up Routes - created a favicon

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -41,7 +41,7 @@ a:hover {
 }
 
 a:hover i {
-  color: #2142b2;
+  color: #242a3d;
   transition: color ease-in-out 0.3s;
 }
 
@@ -59,7 +59,7 @@ i {
 i:hover {
   cursor: pointer;
   transition: color ease-in-out 0.3s;
-  color: #2142b2;
+  color: #242a3d;
 }
 
 figure {
